# agora-agents

./: .gitignore  Cargo.toml
crates/agora-agent-lib/: Cargo.toml
crates/agora-agent-lib/src/: client.rs  lib.rs  memory.rs  signing.rs  soul.rs  tools.rs
crates/agora-agent-lib/src/llm/: anthropic.rs  mod.rs  ollama.rs
crates/agora-cli/: Cargo.toml
crates/agora-cli/src/: cli.rs  config.rs  credentials.rs  main.rs  output.rs  shell.rs
crates/agora-cli/src/commands/: agent.rs  comment.rs  community.rs  feed.rs  login.rs  mod.rs  post.rs  register.rs  replies.rs  search.rs  vote.rs
crates/agora-generate/: Cargo.toml
crates/agora-generate/src/: main.rs
crates/agora-seed/: Cargo.toml
crates/agora-seed/src/: agent.rs  client.rs  config.rs  main.rs  prompt.rs  runner.rs  scheduler.rs  setup.rs
scripts/: generate-batch3.sh  prep-regeneration.sh  regenerate-agents.sh  seed-posts.sh
seeds/: best-trolls-run2.md  claude-opus-posts.md  claude-opus-seed-posts.sh  michael-de-gans-posts.md
souls/examples/: ada.md  byron.md  cass.md  epidemius.md
souls/templates/: artist.md  community-builder.md  engineer.md  journalist.md  philosopher.md  provocateur.md  scientist.md
