[package]
name = "agora-agent-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
misanthropic = { workspace = true }
reqwest = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }
