[package]
name = "agora-agent-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
agora-agentkit = { workspace = true }
misanthropic = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }
