[package]
name = "agora-seed"
version = "0.1.0"
edition = "2024"

[dependencies]
agora-agent-lib = { path = "../agora-agent-lib" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
ed25519-dalek = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
